# nixl

./: .codespellrc  meson.build  meson_options.txt
.gitlab/: test_cpp.sh  test_nixlbench.sh  test_python.sh
benchmark/kvbench/docs/: ct-perftest.md
benchmark/nixlbench/src/worker/nixl/: nixl_worker.cpp
contrib/aws-efa/: README.md
docs/: CodeStyle.md  Contributing.md  nixl_service_agent.md  python_api.md
examples/: README.md
examples/cpp/: meson.build  nixl_example_replica.cpp
examples/python/: README.md  basic_two_peers.py  query_mem_example.py
src/: meson.build
src/api/cpp/: nixl.h  nixl_descriptors.h  nixl_params.h  nixl_types.h
src/api/cpp/backend/: backend_aux.h  backend_engine.h  notif_callbacks.h
src/api/python/: __init__.py  _api.py  _service_api.py  meson.build
src/bindings/python/: meson.build  nixl_bindings.cpp  nixl_bindings.h  nixl_service_bindings.cpp
src/bindings/rust/: README.md  stubs.cpp  wrapper.cpp
src/bindings/rust/src/: lib.rs
src/bindings/rust/src/descriptors/: reg.rs  xfer.rs
src/bindings/rust/tests/: tests.rs
src/core/: agent_data.h  meson.build  nixl_agent.cpp  telemetry.cpp  telemetry.h  telemetry_writer.cpp  telemetry_writer.h  transfer_request.h
src/infra/: mem_section.h  nixl_descriptors.cpp  nixl_memory_section.cpp
src/plugins/cuda_gds/: gds_backend.cpp  gds_backend.h
src/plugins/gds_mt/: gds_mt_backend.cpp  gds_mt_backend.h
src/plugins/hf3fs/: hf3fs_backend.cpp  hf3fs_backend.h
src/plugins/mooncake/: mooncake_backend.h
src/plugins/posix/: README.md  posix_backend.cpp  posix_backend.h
src/plugins/ucx/: ucx_backend.cpp  ucx_backend.h
src/plugins/ucx_mo/: ucx_mo_backend.h
src/services/: meson.build  nixl_service.cpp  nixl_service.h  nixl_service_data.h  nixl_service_types.h
src/services/marshal/: marshal_backend.h  marshal_protocol.cpp  marshal_protocol.h  marshal_utils.h
src/services/marshal/staging/: staging_backend.cpp  staging_backend.h
src/utils/common/: cyclic_buffer.h
src/utils/file/: README.md  file_utils.cpp  file_utils.h
src/utils/serdes/: serdes.cpp
test/gtest/: meson.build  notif_callbacks.cpp  query_mem.cpp  telemetry_test.cpp  test_transfer.cpp
test/gtest/unit/: meson.build  query_file.cpp  query_mem.cpp
test/nixl/: agent_example.cpp  meson.build  nixl_service_example.cpp  nixl_test.cpp
test/python/: prep_xfer_perf.py  test_nixl_api.py  test_nixl_bindings.py  test_nixl_service.py  test_prefixed_open.py  test_query_mem.py
test/unit/: meson.build
test/unit/plugins/ucx/: ucx_backend_multi.cpp  ucx_backend_test.cpp
test/unit/utils/: meson.build
test/unit/utils/file/: meson.build  test_file_utils.cpp
